[package]
name = "rtimer"
version = "0.1.1"
authors = ["Ryo Tanaka <callas1900@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.13.0"
structopt = "0.2.10"
colored = "1.9"

[dev-dependencies]
assert_cmd = "0.10"
